Fixed NCO bug with two's complement representation

--- a/Effects_Pedal/Oscilator/Oscilator.html
+++ b/Effects_Pedal/Oscilator/Oscilator.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2023.09.06.00:51:54</td>
+    <td class="l">2023.09.11.22:31:27</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -142,7 +142,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">mpr</td>
-        <td class="parametervalue">26</td>
+        <td class="parametervalue">16</td>
        </tr>
        <tr>
         <td class="parametername">cordic_arch</td>
@@ -158,11 +158,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">want_dither</td>
-        <td class="parametervalue">false</td>
+        <td class="parametervalue">true</td>
        </tr>
        <tr>
         <td class="parametername">dpri</td>
-        <td class="parametervalue">5</td>
+        <td class="parametervalue">8</td>
        </tr>
        <tr>
         <td class="parametername">fsamp</td>
@@ -170,15 +170,15 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">freq_out</td>
-        <td class="parametervalue">4.2E-5</td>
+        <td class="parametervalue">4.0E-5</td>
        </tr>
        <tr>
         <td class="parametername">phi_inc</td>
-        <td class="parametervalue">7216</td>
+        <td class="parametervalue">6872</td>
        </tr>
        <tr>
         <td class="parametername">real_freq_out</td>
-        <td class="parametervalue">4.2E-5</td>
+        <td class="parametervalue">4.0E-5</td>
        </tr>
        <tr>
         <td class="parametername">want_freq_mod</td>
@@ -234,7 +234,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   <table class="blueBar">
    <tr>
     <td class="l">generation took 0.00 seconds</td>
-    <td class="r">rendering took 0.00 seconds</td>
+    <td class="r">rendering took 0.01 seconds</td>
    </tr>
   </table>
  </body>
